- more FindBugs fixes